# trojan-obfuscation

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  install.sh  tcp_sink.py  udp_smoke_test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  release.yml
.github/workflows/: ci-smoke.yml  client-packaging.yml  main.yml  release.yml
client/: .gitignore  README.md  pubspec.yaml
client/lib/: bootstrap.dart  main.dart
client/linux/: CMakeLists.txt
client/test/: widget_test.dart
client/windows/: CMakeLists.txt
configs/: README.md  baseline-profile.json-example  trusted-front-candidate-profile.json-example
docs/: ECH_GUIDE.md  FRONTEND_COMPARISON.md  README.md  adr-client-product-stack.md  baseline-validation-report.md  baseline-vs-trusted-front-candidate-comparison-report.md  baseline-vs-trusted-front-verdict-template.md  branching-and-release-status.md  build.md  capability-evaluation-matrix.md  client-cross-platform-packaging.md  client-development-notes.md  client-finish-line-packet.md  client-internal-alpha-checklist.md  client-linux-packaging-plan.md  client-linux-packaging-scaffold.md  client-packaging-next-actions.md  client-packaging-readiness.md  client-product-architecture.md  client-runtime-smoke-test.md  client-ui-ux-checklist.md  client-ui-validation-plan.md  client-ui-validation-review-2026-03-11.md  client-wrap-up-summary-2026-03-11.md  config.md  desktop-lifecycle-behavior.md  desktop-validation-matrix.md  detectability-validation-workflow.md  final-capability-comparison.md  first-tier-promotion-scorecard.md  first-tier-readiness-roadmap.md  phase-2-wrap-up.md  phase-2b-architecture.md  phase-3-plan.md  phase-3c-direction.md  phase-3c-handoff-contract.md  phase-3c-integration-note.md  phase-3c-observability-note.md  phase-3c-rollout-note.md  phase-3c-wrap-up.md  (+35 more)
docs/decisions/: 001-branch-and-release-strategy.md  002-client-product-direction.md
docs/en/: config-generation.md  day-2-operations.md  dns-providers.md  full-installer-usage.md  install-kernel.md  quick-install.md  quickstart.md  tp-cli.md
docs/metrics/: v1.5.0-ux-event-dictionary.md  v1.5.0-ux-metric-computation-spec.md
docs/ops/: branch-cleanup.md  full-installer-live-acceptance.md
docs/planning/: trusted-front-first-execution-plan.md  trusted-front-staging-candidate-validation-report.md  two-host-trusted-front-execution-checklist.md  two-host-trusted-front-first-execution-notes-template.md  two-host-trusted-front-staging-execution-plan.md
docs/runbooks/: abuse-control.md  baseline-validation-evidence.md  candidate-log-reading.md  compare-validation-summaries.md  fill-baseline-vs-trusted-front-verdict.md  first-connect-a1.md  generate-trusted-front-claims-pack.md  generate-trusted-front-stage-summary.md  generate-trusted-front-verdict-draft.md  latest-trusted-front-artifacts.md  local-dev.md  operator-signals.md  profile-selection.md  recovery-ladder-a1.md  rollback-verification.md  send-trusted-front-frame.md  trusted-front-candidate-validation-evidence.md  truthful-daily-use-i3.md  two-host-trusted-front-first-execution.md
docs/zh-CN/: config-generation.md  day-2-operations.md  dns-providers.md  full-installer-usage.md  install-kernel.md  quick-install.md  quickstart.md  tp-cli.md
examples/: Caddyfile-example  client-obfuscation.json-example  client-routing.json-example  client.json-example  rules.json-example  server.json-example
packaging/android/: README.md
packaging/linux/: README.md  release-metadata.env
packaging/macos/: README.md
packaging/windows/: README.md
scripts/: __init__.py  build-client-linux-bundle-tar.sh  build-client-linux-package.sh  build-trojan-core.sh  check-profile-mode.sh  client_packaged_smoke.py  collect-baseline-validation-evidence.sh  collect-client-android-apk.sh  collect-trusted-front-candidate-evidence.sh  compare-validation-summaries.py  deploy.sh  deploy_caddy_trojan.sh  generate-trusted-front-claims-pack.py  generate-trusted-front-stage-summary.py  generate-trusted-front-verdict.py  override-client-release-metadata.py  package-client-macos-app-zip.sh  package-client-windows-zip.sh  prepare-two-host-trusted-front-staging.sh  read-client-release-metadata.sh  run-client-runtime-smoke.sh  run-trusted-front-front-check.sh  run-two-host-trusted-front-local-dry-run.sh  send-trusted-front-frame.py  smoke-check-client-artifacts.sh  start-trusted-front-backend-candidate.sh  stop-trusted-front-backend-candidate.sh  validate_client_release_truth.py  validate_full_installer_v1.sh  validate_iter1_first_connect.sh  validate_iter2_recovery_ladder.sh  validate_iter3_perf_baseline.sh  validate_iter3_truthful_daily_use.sh  validate_repo_cleanup_installer_routing.sh  verify-artifact-checksums.sh
scripts/config/: generate-client-bundle.py
scripts/install/: __init__.py  install-kernel.sh
scripts/perf/: compute_daily_action_perf_baseline.py
scripts/release/: tp-install.sh
scripts/repo/: cleanup-branches.sh
scripts/tests/: test_cleanup_branches_contract.py  test_client_packaged_smoke.py  test_compute_daily_action_perf_baseline.py  test_compute_ux_metrics_snapshot.py  test_dns_provider_registry.py  test_docs_bilingual_index.py  test_export_client_bundle_from_manifest.py  test_generate_client_bundle.py  test_github_release_binary_installer.py  test_install_binary_contract.py  test_install_kernel_apply_flow.py  test_install_kernel_contract.py  test_install_manifest_runtime.py  test_install_preflight_contract.py  test_linux_smoke_e2e_server_threads_contract.py  test_render_install_runtime.py  test_tp_cli_contract.py  test_tp_cli_mutations.py  test_tp_install_contract.py  test_tp_install_lang_prompt_contract.py  test_tp_install_sh_contract.py  test_tp_install_sh_interactive_contract.py  test_validate_client_release_truth.py  test_validate_full_installer_v1.py  test_validate_repo_cleanup_installer_routing.py
scripts/ux/: compute_ux_metrics_snapshot.py
src/: main.cpp
src/core/: abuse_controller.cpp  abuse_controller.h  authenticator.cpp  authenticator.h  config.cpp  config.h  log.h  (+46 more)
(+284 files in other folders)
